--- a/main.html
+++ b/main.html
@@ -15,6 +15,6 @@
   
   <div class="date-display" id="dateDisplay"></div>
   
-  <script src="./script.js"></script>
+  <script src="./script.js" defer></script>
 </body>
 </html>
